third_party/move/move-compiler-v2/tests/unit_test/notest/cross_module_test_only_module.exp

Diagnostics:
error: unbound module
   ┌─ tests/unit_test/notest/cross_module_test_only_module.move:10:9
   │
10 │     use 0x1::M;
   │         ^^^^^^ Invalid 'use'. Unbound module: '0x1::M'

error: unbound module
   ┌─ tests/unit_test/notest/cross_module_test_only_module.move:13:9
   │
13 │         M::foo()
   │         ^ Unbound module or type alias 'M'
